Accessibilty fix: contrast fix. Score now 100%

--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,7 @@
   --darkred: #7F0036;
   --lightgray: #e0e0e0;
   --gray: #C0C0C0;
+  --meddarkgray:#707070;
   --darkgray: #333;
   --navy: #17050F;
   --blue: #082840;
@@ -71,7 +72,7 @@ code {
 footer {
   margin-bottom: 1rem;
   margin-top: 2rem;
-  color: var(--gray);
+  color: var(--meddarkgray);
 }
 main {
   padding: 0rem 0.25rem;
